BE/error/src/main/java/com/example/demo/filter/application/dto/UpdateFilteResponse.java
package com.example.demo.filter.application.dto;

import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Getter;
import lombok.NoArgsConstructor;

@Getter
@AllArgsConstructor
@NoArgsConstructor
@Builder(toBuilder = true)
public class UpdateFilteResponse {
    private Long filterId;
}
